--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.1.0",
